# drminfo

./: .gitignore  .gitlab-ci.yml  .travis.yml  Makefile  README.md  complete.c  complete.h  drm-lease-x11.c  drm-lease.c  drm-lease.h  drmfmtmods.h  drminfo.1  drminfo.c  drminfo.man  drminfo.spec  drmtest.1  drmtest.c  drmtest.man  drmtools-egl.c  drmtools.c  drmtools.h  egltest.c  fbformat.sh  fbinfo.c  fbtest.c  fbtools.c  fbtools.h  gtktest.c  image.c  image.h  logind.c  logind.h  meson.build  prime.c  render.c  render.h  ttytools.c  ttytools.h  update-fmtmod.pl  virtiotest.c
tests/: README  basic.py  cursor.py  edid.py  migration.py  swiotlb.py  unbind.py  unload.py
tests/drminfo/: __init__.py
tests/qemu/: sync.sh
